--- a/.github/workflows/build-lint.yml
+++ b/.github/workflows/build-lint.yml
@@ -1,14 +1,13 @@
-name: CI
+name: Build & Lint
 
 on:
   push:
-    branches: [master]
+    branches: [master, main]
   pull_request:
-    branches: [master]
+    branches: [master, main]
 
 env:
-  NODE_VERSION: '20'
-  PNPM_VERSION: '9'
+  NODE_VERSION: '22'
 
 jobs:
   setup:
@@ -16,7 +15,6 @@ jobs:
     timeout-minutes: 10
     outputs:
       pnpm-cache-dir: ${{ steps.pnpm-cache.outputs.pnpm-cache-dir }}
-      node-modules-cache-hit: ${{ steps.node-modules-cache.outputs.cache-hit }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,7 +27,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: 9.0.0
 
       - name: Get pnpm store directory
         id: pnpm-cache
@@ -45,12 +43,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
-      - name: Cache node_modules
-        id: node-modules-cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/pnpm-lock.yaml') }}
+      # Intentionally do not cache node_modules in this job; each job manages its own cache
 
       - name: Install dependencies
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
@@ -75,7 +68,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: 9.0.0
 
       - name: Setup pnpm cache
         uses: actions/cache@v4
@@ -86,13 +79,14 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Cache node_modules
+        id: node-modules-cache
         uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - name: Install dependencies
-        if: needs.setup.outputs.node-modules-cache-hit != 'true'
+        if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: pnpm install --frozen-lockfile
 
       - name: Run JS/TS lint
@@ -123,7 +117,7 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: 9.0.0
 
       - name: Setup pnpm cache
         uses: actions/cache@v4
@@ -134,13 +128,14 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Cache node_modules
+        id: node-modules-cache
         uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-node-modules-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - name: Install dependencies
-        if: needs.setup.outputs.node-modules-cache-hit != 'true'
+        if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: pnpm install --frozen-lockfile
 
       - name: Run build
